Revision history for cpan-testers-autorun
=========================================

1.00    2015-09-14
        - First public release

        Prior versions were not recorded.